--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "color-interpolate": "^2.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.22",
     "html-to-image": "^1.11.13",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
